--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -1,4 +1,8 @@
-﻿@model HREntity.Application
+﻿
+@{
+    Layout = "_AddLayout";
+}
+@model HREntity.Application
 
 @{
     ViewData["Title"] = "Add";
@@ -11,77 +15,95 @@
 <div class="row">
     <div class="col-md-4">
        
-        <form asp-action="Save" method="post">
+        <form  asp-action="Save" method="post" enctype = "multipart/form-data" >
 
             @Html.HiddenFor(x => x.Id)
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div id="FirstName">
             <div class="form-group">
                 @Html.LabelFor(x => x.FirstName, new { @class = "control-label" })
                 @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.FirstName, "", new { @class = "text-danger" })
-            </div>
-            <div class="form-group">
+            </div></div>
+            <div id="MidName">
+           <div class="form-group">
                 <label asp-for="MiddleName" class="control-label"></label>
                 <input asp-for="MiddleName" class="form-control" />
                 <span asp-validation-for="MiddleName" class="text-danger"></span>
-            </div>
+            </div></div>
+            <div id="LastName">
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
+            </div></div>
+            <div id="email">
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
+            </div></div>
+            <div id="phone">
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
+            </div></div>
+            <div id="gender">
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
                 <input asp-for="Gender" class="form-control" />
                 <span asp-validation-for="Gender" class="text-danger"></span>
-            </div>
+            </div></div>
+            <div id="address">
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
+            </div></div>
+            <div id="experience">
             <div class="form-group">
                 <label asp-for="Experience" class="control-label"></label>
                 <input asp-for="Experience" class="form-control" />
                 <span asp-validation-for="Experience" class="text-danger"></span>
-            </div>
+            </div> </div>
+            <div id="status">
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
                 <input asp-for="Status" class="form-control" />
                 <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
+            </div> </div>
+            <div id="resume">
+                                                        
             <div class="form-group">
-                <label asp-for="Resume" class="control-label"></label>
-                <input asp-for="Resume" class="form-control" />
-                <span asp-validation-for="Resume" class="text-danger"></span>
-            </div>
+                <label  asp-for="Resume" class="control-label"></label>
+                
+                <input  type="file"  value="Upload" name="file" class="form-control" />
+                <span  class="text-danger"></span>
+            </div> </div>
+            <div id="vacancyid">
             <div class="form-group">
                 <label asp-for="VacancyId" class="control-label"></label>
                 <select asp-for="VacancyId" class="form-control" asp-items="ViewBag.VacancyId"></select>
-            </div>
+            </div></div>
+            <div id="stageid">
             <div class="form-group">
                 <label asp-for="StageId" class="control-label"></label>
                 <select asp-for="StageId" class="form-control" asp-items="ViewBag.StageId"></select>
-            </div>
+            </div> </div>
+
+            <div id="datecreated">
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
+                <input type="date"  class="form-control" />
                 <span asp-validation-for="DateCreated" class="text-danger"></span>
-            </div>
+            </div> </div>
+            <div id="submit">
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            </div> </div>
         </form>
     </div>
 </div>
@@ -89,4 +111,10 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+<script> src="jquery-3.6.0.min"</script>
+<script> src="jquery-ui.min"</script>
+<script>
+$(document).ready(function(){
+$("#datecreated").datecreated();
+})
+</script>
