--- a/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
@@ -38,7 +38,7 @@
             <tr>
                 <th><a onclick="sort('id','@ViewBag.orderBy')" href="/vacancy/index?columnName=id&orderBy=@ViewBag.orderBy">#</a></th>
                 <th><a onclick="sort('position','@ViewBag.orderBy')" href="/vacancy/index?columnName=position&orderBy=asc">Vacancy Information</a></th>
-                <th>Availability</th>
+                <th>Document</th>
                 <th>Status</th>
                 <th>Action</th>
 
@@ -54,7 +54,8 @@
                         Skills :@Model[i].Skills<br>
                         Experience : @Model[i].Experience <br>
                     </td>
-                    <td>@Model[i].Availability</td>
+                    <a href="#"><td><button type="button" class="btn btn-success">Download</button></td></a>
+                    
                     <td><span class="badge badge-success">Active</span></td>
                     <td>
                         <button type="button" class="btn btn-success">View</button>
@@ -73,7 +74,7 @@
             <tr>
                 <th>#</th>
                 <th>Vacancy Information</th>
-                <th>Availability</th>
+                <th>Document</th>
                 <th>Status</th>
                 <th>Action</th>
 
