--- a/HrSystem/HrSystem/Views/Vacancy/Jquery.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Jquery.cshtml
@@ -10,7 +10,7 @@
             <tr>
                 <th>#</th>
                 <th>Vacancy Information</th>
-                <th>Availability</th>
+                <th>Document</th>
                 <th>Status</th>
                 <th>Action</th>
 
@@ -26,7 +26,7 @@
                         Skills :@Model[i].Skills<br>
                         Experience : @Model[i].Experience <br>
                     </td>
-                    <td>@Model[i].Availability</td>
+                    <td>@Model[i].Document</td>
                     <td><span class="badge badge-success">Active</span></td>
                     <td>
                         <button type="button" class="btn btn-success">View</button>
@@ -45,7 +45,7 @@
             <tr>
                 <th>#</th>
                 <th>Vacancy Information</th>
-                <th>Availability</th>
+                <th>Document</th>
                 <th>Status</th>
                 <th>Action</th>
 
