Changes in application and vacancy page

--- a/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
@@ -53,13 +53,16 @@
             <tr>
                 <td>@Model[i].Id</td>
                 <td>
+                   
                     Position : @Model[i].Position<br>
                     Skills :@Model[i].Skills<br>
                     Experience : @Model[i].Experience <br>
 
                 </td>
 
-                <td><button type="button" class="btn btn-success">Download</button></td>
+                <td><a href="~/applications/add"><button type="button" class="btn btn-success">Add Applicant</button></a></td>
+             
+                
                 <td><span class="badge badge-success">Active</span></td>
                 <td>
                     <button type="button" class="btn btn-success">View</button>
