--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Add";
 }
 
-<h1>Add</h1>
+<h2> <center>Add New Applicant</center></h2>
 
-<h4>Application</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -51,9 +51,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
+                <select asp-for="Gender" class="form-control" asp-items="ViewBag.gender"></select>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" />
@@ -83,12 +83,12 @@
 
 
             <div class="form-group">
-                <label asp-for="VacancyId" class="control-label"></label>
-                <select asp-for="VacancyId" class="form-control" asp-items="ViewBag.VacancyId"></select>
+                <label asp-for="Vacancy" class="control-label"></label>
+                <select asp-for="Vacancy" class="form-control" asp-items="ViewBag.VacancyId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="StageId" class="control-label"></label>
-                <select asp-for="StageId" class="form-control" asp-items="ViewBag.StageId"></select>
+                <label asp-for="Stage" class="control-label"></label>
+                <select asp-for="Stage" class="form-control" asp-items="ViewBag.StageId"></select>
             </div>
             <div class="form-group">
 
