--- a/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
@@ -4,31 +4,29 @@
     ViewData["Title"] = "Add";
 }
 
-<h1>Add</h1>
+<h2><center>Add New Vacancy</center></h2>
 
-<h4>Vacancy</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form action="/Vacancy/Save" method="post">
             @Html.HiddenFor(x => x.Id)
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+           
             <div class="form-group">
                 <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
-                <span asp-validation-for="Position" class="text-danger"></span>
+                <select asp-for="Position" class="form-control" asp-items="ViewBag.position"></select>
+                @*<input asp-for="Position" class="form-control" />*@
+                @*<span asp-validation-for="Position" class="text-danger"></span>*@
+            
             </div>
             <div class="form-group">
                 <label asp-for="Skills" class="control-label"></label>
                 <input asp-for="Skills" class="form-control" />
                 <span asp-validation-for="Skills" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Availability" class="control-label"></label>
-                <input asp-for="Availability" class="form-control" />
-                <span asp-validation-for="Availability" class="text-danger"></span>
-            </div>
-
+            
             <div class="form-group">
                 <label asp-for="Experience" class="control-label"></label>
                 <input asp-for="Experience" class="form-control" />
@@ -36,8 +34,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <select asp-for="Status" class="form-control" asp-items="ViewBag.status"></select>
+                
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
