--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -89,7 +89,12 @@
                 <label  asp-for="Resume" class="control-label"></label>
                 
                 <input  type="file"  value="Upload" name="file" class="form-control" />
-                <span  class="text-danger"></span>
+                    @if (!string.IsNullOrWhiteSpace(Model.Resume))
+                    {
+                      <input asp-for="Resume"  type="hidden"   />
+                        <span>@Model.Resume</span>
+                    }
+                    <span  class="text-danger"></span>
             </div> </div>
             <div id="vacancyid">
             <div class="form-group">
@@ -104,8 +109,9 @@
 
             <div id="datecreated">
             <div class="form-group">
+
                 <label asp-for="DateCreated" class="control-label"></label>
-                <input type="date"  class="form-control" />
+                <input asp-for="DateCreated" class="form-control" type="text" />
                 <span asp-validation-for="DateCreated" class="text-danger"></span>
             </div> </div>
             <div id="submit">
@@ -119,10 +125,17 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-<script> src="jquery-3.6.0.min"</script>
-<script> src="jquery-ui.min"</script>
-<script>
-$(document).ready(function(){
-$("#datecreated").datecreated();
-})
-</script>
+@section Scripts {
+    <script>
+
+        $(document).ready(function () {
+            $("#DateCreated").datepicker({
+                dateFormat: 'dd-mm-yy',
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "2020:2030"
+            });
+
+        });
+    </script>
+}
