--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -9,7 +9,7 @@
     </a>
 </center>
 
-    </a>
+   
 <br>
 <hr>
 @{
@@ -181,4 +181,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
+ <script type="text/javascript" scr="~/js/jquery-ui.min.js.js"></script>
+
 
