--- a/HrSystem/HrSystem/Views/Shared/_AddLayout - Copy.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_AddLayout - Copy.cshtml
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
-     
-     <link rel="stylesheet" type="text/css" href="~/css/Date.css">
+     <link rel="stylesheet" href="~/css/Date.css">
     
 
     <style>
@@ -383,20 +382,7 @@ width:20em;
         <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
         <script type="text/javascript" src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
         <script type="text/javascript" src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-     @*   <script type="text/javascript" scr="~/js/jquery-ui.min.js"></script>*@
-
-       <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"
-                integrity="sha256-xH4q8N0pEzrZMaRmd7gQVcTZiFei+HfRTBPJ1OGXC0k="
-                crossorigin="anonymous"></script>
-
-        @*<script  scr="jquery-3.6.0.min"></script>*@
-
-
-        <script type="text/javascript" scr="~/js/jquery-ui.min.js.js"></script>
-
-
     </div>
-     @RenderSection("Scripts", required: false)
-</body>                                     
+</body>
 </html>
  
