--- a/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
@@ -1,4 +1,10 @@
-﻿@model HREntity.Vacancy
+﻿
+
+@{
+    Layout = "_AddLayout";
+}
+
+@model HREntity.Vacancy
 
 @{
     ViewData["Title"] = "Add";
@@ -23,11 +29,7 @@
                 <input asp-for="Skills" class="form-control" />
                 <span asp-validation-for="Skills" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Availability" class="control-label"></label>
-                <input asp-for="Availability" class="form-control" />
-                <span asp-validation-for="Availability" class="text-danger"></span>
-            </div>
+           
 
             <div class="form-group">
                 <label asp-for="Experience" class="control-label"></label>
@@ -46,7 +48,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
+                <input asp-for="DateCreated" class="form-control" type="text" />
                 <span asp-validation-for="DateCreated" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -59,4 +61,19 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+@section Scripts {
+    <script>
 
+        $(document).ready(function () {
+            $("#DateCreated").datepicker({
+                dateFormat: 'dd-mm-yy',
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "2020:2030"
+            });
+
+        });
+    </script>
+}
+
+}
