--- a/HrSystem/HrSystem/wwwroot/css/Login.css
+++ b/HrSystem/HrSystem/wwwroot/css/Login.css
@@ -1,5 +1,27 @@
 ﻿
 
+body {
+											width: 100%;
+											height: 100vh;
+											overflow: scroll;
+											display: flex;
+											flex-direction: column;
+											align-items: center;
+											justify-content: center;
+											
+											
+}
+
+											body::-webkit-scrollbar {
+																						display: none;
+											}
+
+body {
+											-ms-overflow-style: none;
+											scrollbar-width: none;
+											
+}
+
 .login__page {
 											width: 60%;
 											height: 80vh;
@@ -9,12 +31,14 @@
 											flex-direction: column;
 											align-items: center;
 											justify-content: center;
+											
 }
 
 											.login__page form {
 																						display: flex;
 																						flex-direction: column;
 																						align-items: center;
+																						
 											}
 
 											.login__page .profile__image {
