--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -18,44 +18,8 @@
     PageModel pageModel = ViewBag.pageModel as PageModel;
 }
 
-<form method="post" action="/Applications/Index">
-    <div class="row">
-        <div class="col-6">
-            <div class="form-group">
-                <label for="Id">Id:</label>
-                <input type="text" class="form-control" value="@applicationModel.IdSearch" name="IdSearch" id="IdSearch">
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="form-group">
-                <label for="Name">Name</label>
-                <input type="text" class="form-control" value="@applicationModel.NameSearch" name="NameSearch" id="NameSearch">
-            </div>
-        </div>
+@Html.Partial("Search")
 
-        <div class="col-6">
-            <div class="form-group">
-                <label for="Id">Applied For:</label>
-                <input type="text" class="form-control" value="@applicationModel.AppliedForSearch" name="AppliedForSearch" id="AppliedForSearch">
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="form-group">
-                <label for="Name">Status :</label>
-                <input type="text" class="form-control" value="@applicationModel.StageStatusSearch" name="StageStatusSearch" id="StageStatusSearch">
-            </div>
-        </div>
-
-    </div>
-
-
-    <input type="hidden" name="columnName" id="columnName" value="@ViewBag.columnName" />
-    <input type="hidden" name="orderBy" id="orderBy" value="@ViewBag.orderBy" />
-    <input type="hidden" name="currentPage" id="currentPage" value="@pageModel.CurrentPage" />
-
-    <button type="submit" id="btnSubmit">Search</button>
-
-</form>
 <div class="container">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
@@ -135,52 +99,7 @@
 
 </div>
 
-<script>
-
-    function pageSubmit() {
-        document.getElementById("btnSubmit").click();
-    }
-
-    function pageChange(currentPage) {
-        event.preventDefault();
-
-
-        document.getElementById("currentPage").value = currentPage;
-        pageSubmit();
-        return false;
-    }
-
-
-    function isDelete() {
-        if (confirm("do you want to delete user")) {
-
-        } else {
-            event.preventDefault();
-            return false;
-        }
-    }
-
-
-    function sort(columnName, orderBy) {
-        event.preventDefault();
-
-
-        document.getElementById("columnName").value = columnName;
-        if ("asc" == orderBy) {
-            document.getElementById("orderBy").value = "desc";
-        } else {
-            document.getElementById("orderBy").value = "asc";
-        }
-
-
-        pageSubmit();
-        return false;
-    }
-</script>
-
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
- <script type="text/javascript" scr="~/js/jquery-ui.min.js.js"></script>
+ 
+ 
 
 
