--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -254,13 +254,14 @@
         <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
         <script type="text/javascript" src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
         <script type="text/javascript" src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-        
+
         <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"
                 integrity="sha256-xH4q8N0pEzrZMaRmd7gQVcTZiFei+HfRTBPJ1OGXC0k="
                 crossorigin="anonymous"></script>
 
         @*<script  scr="jquery-3.6.0.min"></script>*@
 
+        <script type="text/javascript" src="~/js/site.js"></script>
 
 
 
