--- a/HrSystem/HrSystem/Views/Vacancy/Jquery.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Jquery.cshtml
@@ -17,25 +17,7 @@
             </tr>
         </thead>
         <tbody>
-            @for (int i = 0; i < Model.Count; i = i + 1)
-            {
-                <tr>
-                    <td>@Model[i].Id</td>
-                    <td>
-                        Position : @Model[i].Position<br>
-                        Skills :@Model[i].Skills<br>
-                        Experience : @Model[i].Experience <br>
-                    </td>
-                    <td>@Model[i].Document</td>
-                    <td><span class="badge badge-success">Active</span></td>
-                    <td>
-                        <button type="button" class="btn btn-success">View</button>
-                        <button type="button" class="btn btn-warning">Edit</button>
-                        <button type="button" class="btn btn-danger">Delete</button> 
-                    </td>
-
-                </tr>
-            }
+           
 
 
 
@@ -57,7 +39,11 @@
 <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
 <script>
+
+
     $(document).ready(function () {
-        $('#example').DataTable();
+        $('#example').DataTable({
+            
+        });
     });
 </script>
