--- a/HrSystem/HrSystem/Views/Shared/_AddLayout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_AddLayout.cshtml
@@ -289,6 +289,7 @@
                                             float:right;
                                             margin-right:77px;
                                             margin-top:-87px;
+                                          
 
 }
 #address{
@@ -305,39 +306,34 @@
                                            margin-left:342px;
                                            margin-top:-87px;
 }
-#status{
- width:20em;
+
+#resume{
+   width:20em;
                                             margin-left:5px;
                                             float:right;
                                             margin-right:77px;
                                             margin-top:-87px;
 
-}
-#resume{
-   width:20em;
-                                           
-                                            margin-left:5px;
-                                            margin-right:10px;
 }
 #vacancyid{
 width:20em;
-                                            float:left;
-                                           margin-left:342px;
-                                           margin-top:-87px;
-}
-#stageid{ width:20em;
-                                            margin-left:5px;
-                                            float:right;
-                                            margin-right:77px;
-                                            margin-top:-87px;
-
-
-}
-#datecreated{width:20em;
                                            
                                             margin-left:5px;
                                             margin-right:10px;
 
+}
+#stageid{width:20em;
+                                            float:left;
+                                           margin-left:342px;
+                                           margin-top:-87px;
+
+
+}
+#datecreated{  width:20em;
+                                            margin-left:5px;
+                                            float:right;
+                                            margin-right:77px;
+                                            margin-top:-87px;
 
 }
 
@@ -369,7 +365,7 @@ width:20em;
         <a href="~/Home"><i class="fas fa-home"></i><span>Home</span></a>
         <a href="~/Applications"><i class="fas fa-user-tie"></i><span>Applications</span></a>
         <a href="~/Vacancy"><i class="fas fa-list"></i><span>Vacancy</span></a>
-        <a href="~/StatusCategory"><i class="fas fa-list"></i><span>Status Category</span></a>
+        <a href="~/Stage"><i class="fas fa-list"></i><span>Stage</span></a>
         <a href="~/Users"><i class="fas fa-users"></i><span>Users</span></a>
         <a href="#"><i class="fas fa-cogs"></i><span>Settings</span></a>
     </div>
