--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -4,8 +4,8 @@
 
 <center><h2>Application List</h2></center>
 <center>
-    <a href="~/Applications/Add">
-       + New Applicant
+    <a href="~/Applications/Add"><button type="button" class="btn btn-primary">+ New Applicant</button>
+       
     </a>
 </center>
 
@@ -63,7 +63,7 @@
                 <th><a onclick="sort('id', '@ViewBag.orderBy')" href="/applications/index?columnName=id&orderBy=@ViewBag.orderBy">#</a></th>
                 <th><a onclick="sort('name', '@ViewBag.orderBy')" href="/applications/index?columnName=name&orderBy=@ViewBag.orderBy">Applicant Information</a></th>
                 <th>Document</th>
-                <th>Status</th>
+                <th>Stage</th>
                 <th>Action</th>
 
             </tr>
@@ -77,14 +77,14 @@
                         Name : @Model[i].FirstName<br>
                         Applied for : @Model[i]?.Vacancy?.Position<br>
                         Experience : @Model[i]?.Experience <br>
-                        Stage : @Model[i]?.Stage?.StatusLabel<br>
+                       
                     </td>
                     <td><a href="/Applications/Download/@Model[i].Id" download name="resume">@Model[i].Resume</a></td>
-                    <td><span class="badge badge-success">New</span></td>
+                    <td><span class="badge badge-success"> @Model[i]?.Stage?.StatusLabel<br></span></td>
                     <td>
                         <button type="button" class="btn btn-success">View</button>
-                        <a href="~/Applications/Edit/@Model[i].Id">   Edit</a>
-                        <a href="~/Applications/delete/@Model[i].Id"  onclick="isDelete()">   Delete</a>
+                        <a href="~/Applications/Edit/@Model[i].Id">  <button type="button" class="btn btn-warning">Edit</button> </a>
+                        <a href="~/Applications/delete/@Model[i].Id"  onclick="isDelete()">  <button type="button" class="btn btn-danger">Delete</button></a>
                     </td>
 
                 </tr>
