chabges done as per requirement

--- a/HrSystem/HrSystem/Views/Applications/Search.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Search.cshtml
@@ -14,7 +14,7 @@
         </div>
         <div class="col-6">
             <div class="form-group">
-                <label for="Name">Name</label>
+                <label for="Name">Applicant Name</label>
                 <input type="text" class="form-control" value="@applicationModel.NameSearch" name="NameSearch" id="NameSearch">
             </div>
         </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="col-6">
             <div class="form-group">
-                <label for="Name">Status :</label>
+                <label for="Name">Stage :</label>
                 <input type="text" class="form-control" value="@applicationModel.StageStatusSearch" name="StageStatusSearch" id="StageStatusSearch">
             </div>
         </div>
