--- a/HrSystem/HrSystem/Views/Stage/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Stage/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-  
+
 <div class="row">
     
     <div class="col-sm-9 col-md-6 col-lg-8">
@@ -14,10 +14,10 @@
                 </tr>
             </thead>
             <tbody>
-                  @* @for(int i=0; i<Model.Count; i++)
+                 @* @for(int i=0; i<Model.Count; i++)
                 {
                      <tr>
-                    <td>@Model[i].ID</td>
+                    <td>@Model[i].Id</td>
                     <td>@Model[i].StatusLabel</td>
                     <td>@Model.Status </td>
 
@@ -27,8 +27,8 @@
                         <button type="button" class="btn btn-danger">Delete</button>
                     </td>
 
-                </tr>
-                }*@
+                </tr>*@
+               @* }*@
                 <tr>
                     <td>1</td>
                     <td>Stage I Passed</td>
