--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -59,11 +59,18 @@
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div></div>
-            <div id="gender">
+             <div id="gender">
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
+                @Html.LabelFor(x => x.Gender, new { @class = "control-label" })
+
+                @Html.DropDownList("Gender", new List<SelectListItem>
+               {
+
+
+                 new SelectListItem{Text="Female"},
+                 new SelectListItem{Text="Male"}
+
+                },"Select",   new {@class="form-control"})
             </div></div>
             <div id="address">
             <div class="form-group">
@@ -77,12 +84,7 @@
                 <input asp-for="Experience" class="form-control" />
                 <span asp-validation-for="Experience" class="text-danger"></span>
             </div> </div>
-            <div id="status">
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div> </div>
+           
             <div id="resume">
                                                         
             <div class="form-group">
