--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -239,7 +239,7 @@
     <!--sidebar start-->
     <div class="sidebar">
         <center>
-            <img src="usercircle.jpg" class="profile_image" alt="">
+            <img src="~/css/vm3logo.jpeg" class="profile_image" alt="">
             <h4>Admin</h4>
         </center>
         <a href="~/Home"><i class="fas fa-home"></i><span>Home</span></a>
