--- a/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
@@ -37,9 +37,18 @@
                 <span asp-validation-for="Experience" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
+                 
+                @Html.LabelFor(x => x.Status, new { @class = "control-label" })
+
+                @Html.DropDownList("Status", new List<SelectListItem>
+               {
+
+
+                 new SelectListItem{Text="Active"},
+                 new SelectListItem{Text="Closed"},
+                   new SelectListItem{Text="Hold"}
+
+                },"Select",   new {@class="form-control"})
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
