--- a/HrSystem/HrSystem/Views/Users/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Users/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<User>
 @using HRModels
+<div class ="p-4">
 <a href="~/Users/Add"><center><button type="button" class="btn btn-primary">+ New User</button></center></a>
 
 <br >
@@ -108,8 +109,8 @@
                  <li class="paginate_button page-item next" id="example_next"><a href="#" aria-controls="example" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
                </ul>
          </div>
-  </div><
-
+  </div>
+  </div>
   </div>
   <script>
 function pageSubmit(){
