--- a/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
@@ -1,7 +1,7 @@
 
 @model List<Vacancy>
 @using HRModels;
-
+<div class="p-4">
 <center><h2>Vacancy List</h2></center>
 <a href="~/Vacancy/Add">
 <center><button type="button" class="btn btn-primary">+ New Vacancy</button></center></a>
@@ -125,7 +125,7 @@
                 <li class="paginate_button page-item next disabled" id="example_next"><a href="#" aria-controls="example" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
             </ul></div></div></div>
 </div>
-
+</div>
 <script>
 
 
