--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -1,7 +1,7 @@
 @model List<Application>
 @using HRModels
 
-
+<div class="p-4">
 <center><h2>Application List</h2></center>
 <center>
     <a href="~/Applications/Add"><button type="button" class="btn btn-primary">+ New Applicant</button>
@@ -173,7 +173,7 @@
 
 </div>
  
-
+</div>
  
  
 
