--- a/HrSystem/HrSystem/Views/FeedType/Index.cshtml
+++ b/HrSystem/HrSystem/Views/FeedType/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<div class="p-4">
 <h1>Index</h1>
 
 <p>
@@ -33,3 +33,4 @@
 }
     </tbody>
 </table>
+</div>
