--- a/HrSystem/HrSystem/Views/Stage/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Stage/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 
-<div class="row">
+<div class="row p-4">
     
     <div class="col-sm-9 col-md-6 col-lg-8">
         <table id="example" class="table table-striped table-bordered" style="width:80%">
