--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -57,7 +57,7 @@
 
     <input type="hidden" name="columnName" id="columnName" value="@ViewBag.columnName" />
     <input type="hidden" name="orderBy" id="orderBy" value="@ViewBag.orderBy" />
-    <input type="hidden" name="currentPage" id="currentPage" value="@pageModel.CurrentPage" />
+    <input type="hidden" name="PageModel.currentPage" id="currentPage" value="@pageModel.CurrentPage" />
 
     <button type="submit" id="btnSubmit">Search</button>
 
@@ -167,7 +167,7 @@
                     }
                     <li class="paginate_button page-item next disabled" id="example_next"><a href="#" aria-controls="example" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </div>
 
