--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -250,6 +250,7 @@
         <a href="~/Vacancy"><i class="fas fa-list"></i><span>Vacancy</span></a>
         <a href="~/Stage"><i class="fas fa-list"></i><span>Stage</span></a>
         <a href="~/Users"><i class="fas fa-users"></i><span>Users</span></a>
+        <a href="~/Feed"><i class="fas fa-users"></i><span>Feed</span></a>
         <a href="~/FeedType"><i class="fas fa-users"></i><span>FeedType</span></a>
         <a href="~/TimeSheet"><i class="fas fa-users"></i><span>TimeSheet</span></a>
         <a href="#"><i class="fas fa-cogs"></i><span>Settings</span></a>
