--- a/HrSystem/HrSystem/Views/Feed/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Feed/Index.cshtml
@@ -3,87 +3,115 @@
 @{
     ViewData["Title"] = "Index";
 }
-<div class = "p-4">
-<form method="post" action="~/Feed/Index">
-<div class="row">
-<div class="col-6">
-<div class="form-group">
-<lable for="Id">Id:</lable>
-<input type="text" class="form-control" name="IdSearch" id="IdSearch"/>
-</div>
-</div>
-<div class="col-6">
-<div class="form-group">
-<lable for="Name">Name</lable>
-<input type="text" class="form-control" name="NameSearch" id="TextDataSearch"/>
-</div>
-</div>
-</div>
-<button type="submit"  id="btnsub">Search</button>
-
-
-   </form>
-<div class="container">
-<table id="example" class="table table-striped table-bordered" style="width:100%">
-    <thead>
-        <tr>
-            <th>
-               <a href="~/feed/Index?orderBy=Id&orderType=@ViewBag.orderType"> @Html.DisplayNameFor(model => model.Id)</a>
-            </th>
-            <th>
-               <a href="~/feed/Index?orderBy=TextData&orderType=@ViewBag.orderType"> @Html.DisplayNameFor(model => model.TextData)</a>
-            </th>
-            <th>
-               <a href="~/feed/Index?orderBy=Heading&orderType=@ViewBag.orderType"> @Html.DisplayNameFor(model => model.Heading)</a>
-            </th>
-            <th>
-               <a href="~/feed/Index?orderBy=ShortNotes&orderType=@ViewBag.orderType"> @Html.DisplayNameFor(model => model.ShortNotes)</a>
-            </th>
-            <th>
-                <a href="~/feed/Index?orderBy=FeedTypeId&orderType=@ViewBag.orderType">@Html.DisplayNameFor(model => model.FeedTypeId)</a>
-            </th>
-            <th>
-               <a href="~/feed/Index?orderBy=Link&orderType=@ViewBag.orderType"> @Html.DisplayNameFor(model => model.Link)</a>
-            </th>
-            <th>
-               <a href="~/feed/Index?orderBy=UserName&orderType=@ViewBag.orderType"> @Html.DisplayNameFor(model => model.UserName)</a>
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TextData)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Heading)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShortNotes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FeedTypeId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Link)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                <a href="~/Feed/Edit/@item.Id">
-                <button type="button" class="btn btn-warning">Edit</button></a>
-               <a href="~/Feed/Delete/@item.Id">
-               <button type="button" class="btn btn-danger">Delete</button></a>
-            </td>
-        </tr>
+@{
+    var feedModel = ViewBag.Model as FeedModel; 
 }
-    </tbody>
-</table>
+<div class="p-4">
+    <form method="post" action="~/Feed/Index">
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group">
+                    <lable for="Id">Id:</lable>
+                    <input type="text" class="form-control" value="@feedModel.IdSearch" name="IdSearch" id="IdSearch" />
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <lable for="Name">Name</lable>
+                    <input type="text" class="form-control" value="@feedModel.TextDataSearch" name="TextDataSearch" id="TextDataSearch" />
+                </div>
+            </div>
+        </div>
+
+        <input type="hidden" name="OrderBy" id="orderBy" value="@feedModel.OrderBy" />
+        <input type="hidden" name="ColumnName" id="columnName" value="@feedModel.ColumnName"/>
+
+        <button type="submit" id="btnsub">Search</button>
+
+
+    </form>
+    <div class="container-fluid pt-4">
+        <table id="example" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>
+                        <a onclick ="sort('@feedModel.ColumnName','@feedModel.OrderBy')"> @Html.DisplayNameFor(model => model.Id)</a>
+                    </th>
+                    <th>
+                        <a onclick ="sort('@feedModel.ColumnName','@feedModel.OrderBy')"> @Html.DisplayNameFor(model => model.TextData)</a>
+                    </th>
+                    <th>
+                        <a onclick ="sort('@feedModel.ColumnName','@feedModel.OrderBy')"> @Html.DisplayNameFor(model => model.Heading)</a>
+                    </th>
+                    <th>
+                        <a onclick ="sort('@feedModel.ColumnName','@feedModel.OrderBy')"> @Html.DisplayNameFor(model => model.ShortNotes)</a>
+                    </th>
+                    <th>
+                        <a onclick ="sort('@feedModel.ColumnName','@feedModel.OrderBy')">@Html.DisplayNameFor(model => model.FeedTypeId)</a>
+                    </th>
+                    <th>
+                        <a onclick ="sort('@feedModel.ColumnName','@feedModel.OrderBy')"> @Html.DisplayNameFor(model => model.Link)</a>
+                    </th>
+                    <th>
+                        <a onclick ="sort('@feedModel.ColumnName','@feedModel.OrderBy')"> @Html.DisplayNameFor(model => model.UserName)</a>
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TextData)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Heading)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ShortNotes)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FeedTypeId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Link)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.UserName)
+                        </td>
+                        <td>
+                            <a href="~/Feed/Edit/@item.Id">
+                                <button type="button" class="btn btn-warning">Edit</button>
+                            </a>
+                            <a href="~/Feed/Delete/@item.Id">
+                                <button type="button" class="btn btn-danger">Delete</button>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+
+    </div>
 </div>
-</div>
+
+<script>
+    function sort(columnName, orderBy) {
+        
+        event.preventDefault();
+        if (orderBy == 'asc')
+        {
+           orderBy = 'desc';
+        }else{
+          orderBy = 'asc';
+        }
+        document.querySelector("#orderBy").value = orderBy;
+        document.querySelector("#columnName").value = columnName;
+        document.querySelector("#btnsub").click();
+    }
+</script>
